[gd_scene load_steps=31 format=3 uid="uid://p5smsbcrc372"]

[ext_resource type="Script" path="res://Scripts/HomePage.gd" id="1_h0sqi"]
[ext_resource type="Shader" path="res://Scripts/Toon.gdshader" id="2_4ts8d"]
[ext_resource type="Texture2D" uid="uid://cksooqwfhfmi6" path="res://Assets/UI elements/HomeBackground.png" id="3_prkya"]
[ext_resource type="Texture2D" uid="uid://bbx0jllunp3x7" path="res://Assets/UI elements/UIBall.png" id="4_nwl47"]
[ext_resource type="Theme" uid="uid://b5nx78qe50cv0" path="res://Assets/Theme_1.tres" id="5_cg640"]
[ext_resource type="Texture2D" uid="uid://cxiq32qbvfygn" path="res://Assets/UI elements/PlayButton.png" id="6_mmcy5"]
[ext_resource type="Texture2D" uid="uid://b1yhjjt3gqinr" path="res://Assets/UI elements/PlayButtonPressed.png" id="7_aybse"]
[ext_resource type="Texture2D" uid="uid://coobq5nmiibhv" path="res://Assets/UI elements/CreditsButton.png" id="8_00gev"]
[ext_resource type="Texture2D" uid="uid://s0um4tjcwr6c" path="res://Assets/UI elements/CreditsButtonPressed.png" id="9_omsvs"]
[ext_resource type="Texture2D" uid="uid://b4h35kxb20bxf" path="res://Assets/UI elements/SettingsButton.png" id="10_l8bkm"]
[ext_resource type="Texture2D" uid="uid://eu7jhhfwaovg" path="res://Assets/UI elements/SettingsButtonPressed.png" id="11_7yrjh"]
[ext_resource type="Texture2D" uid="uid://ql4788jye4tw" path="res://icon.svg" id="12_3vsu3"]
[ext_resource type="ArrayMesh" uid="uid://xonnq38osiwr" path="res://Assets/Balls/PerfectSphere.obj" id="12_lo573"]
[ext_resource type="Shader" path="res://Scripts/Outline.gdshader" id="13_300hv"]
[ext_resource type="Texture2D" uid="uid://bm46u1chwj5jn" path="res://Assets/UI elements/blender_logo.svg" id="15_46nur"]
[ext_resource type="ArrayMesh" uid="uid://yymkgtvdypns" path="res://Assets/GolfGameTerrain.obj" id="15_dnv3f"]
[ext_resource type="Texture2D" uid="uid://crubp87ououl5" path="res://Assets/UI elements/git.svg" id="16_fy3s4"]
[ext_resource type="PackedScene" uid="uid://dq8emocbeted6" path="res://Scenes/Outline.tscn" id="16_saxo2"]
[ext_resource type="ArrayMesh" uid="uid://cnjgqfv7jpr1b" path="res://Assets/Clouds/Cloud1.obj" id="17_jl3cu"]
[ext_resource type="ArrayMesh" uid="uid://bo8svob51p5qi" path="res://Assets/Clouds/Cloud2.obj" id="18_bfpb5"]
[ext_resource type="ArrayMesh" uid="uid://cli0pq8rk4jkj" path="res://Assets/Clouds/Cloud3.obj" id="19_uc5da"]
[ext_resource type="Script" path="res://Scripts/CampaignSelector.gd" id="20_ubi46"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c63h5"]
shader = ExtResource("2_4ts8d")
shader_parameter/colorAmt = 8.0

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_nlm6l"]
sky_top_color = Color(0, 0.424625, 0.890654, 1)
sky_horizon_color = Color(0, 0.741829, 0.794995, 1)
sky_curve = 0.178381
sky_energy_multiplier = 0.7
ground_bottom_color = Color(1.62441e-07, 0.098056, 0.133979, 1)
ground_horizon_color = Color(0, 0.741829, 0.794995, 1)
ground_curve = 0.251067
ground_energy_multiplier = 0.7

[sub_resource type="Sky" id="Sky_ow2au"]
sky_material = SubResource("ProceduralSkyMaterial_nlm6l")

[sub_resource type="Environment" id="Environment_27d6d"]
background_mode = 2
sky = SubResource("Sky_ow2au")

[sub_resource type="Curve2D" id="Curve2D_xl4mh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 44, 98, -6.72717, -44.5675, 6.72717, 44.5675, 19, 167, 0, 0, 0, 0, 41, 263, 0, 0, 0, 0, 26, 378, 0, 0, 0, 0, 27, 473, 0, 0, 0, 0, 57, 542, -31.1815, -2.6727, 31.1815, 2.6727, 116, 592, 0, 0, 0, 0, 154, 580, -16.0362, 22.2725, 16.0362, -22.2725, 182, 552, 0, 0, 0, 0, 187, 496, 0, 0, 0, 0, 166, 475, 0, 0, 0, 0, 137, 467, 0, 0, 0, 0, 103, 489, 0, 0, 0, 0, 85, 529, 0, 0, 0, 0, 74, 584, 0, 0, 0, 0, 85, 614, 0, 0, 0, 0, 111, 616, 0, 0, 0, 0, 136, 611, 0, 0, 0, 0, 176, 600, 0, 0, 0, 0, 239, 580, 0, 0, 0, 0, 279, 575)
}
point_count = 21

[sub_resource type="QuadMesh" id="QuadMesh_xvh5t"]
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j7jws"]
render_priority = 0
shader = ExtResource("13_300hv")
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/distance_falloff = 10.0
shader_parameter/smoothing_cutoff = 0.0
shader_parameter/smoothing_max = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5uu55"]
content_margin_left = 10.0
content_margin_top = 10.0
bg_color = Color(1, 1, 1, 1)
draw_center = false

[node name="Home" type="Node3D"]
script = ExtResource("1_h0sqi")

[node name="Toon" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_c63h5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.489158, -0.870229, 0.0585317, 0.780479, 0.466689, 0.415998, -0.38933, -0.157806, 0.90748, 0, 0, 0)
light_color = Color(0.844923, 0.680871, 0.5383, 1)
light_energy = 3.0
shadow_enabled = true
shadow_blur = 1.417

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.489158, 0.870229, -0.0585317, 0.828748, 0.48466, 0.279788, 0.271848, 0.0883525, -0.958276, 0, 0, 0)
light_color = Color(0.844923, 0.680871, 0.5383, 1)
shadow_blur = 1.417
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_27d6d")

[node name="HomeScreen" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="HomeScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 846.0
offset_bottom = 476.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.576512, 0.576512)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_prkya")
expand_mode = 2
stretch_mode = 4

[node name="Path2D" type="Path2D" parent="HomeScreen"]
curve = SubResource("Curve2D_xl4mh")

[node name="PathFollow2D" type="PathFollow2D" parent="HomeScreen/Path2D"]
position = Vector2(18.5595, 146.027)
rotation = 1.68521
progress = 55.6283
loop = false

[node name="TextureRect" type="TextureRect" parent="HomeScreen/Path2D/PathFollow2D"]
offset_left = -24.0634
offset_top = -25.317
offset_right = 25.9366
offset_bottom = 24.683
texture = ExtResource("4_nwl47")
expand_mode = 1

[node name="Buttons" type="VBoxContainer" parent="HomeScreen"]
offset_left = 94.0
offset_top = 163.0
offset_right = 1091.0
offset_bottom = 1211.0
scale = Vector2(0.25, 0.25)
theme_override_constants/separation = -10

[node name="Play" type="TextureButton" parent="HomeScreen/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("5_cg640")
texture_normal = ExtResource("6_mmcy5")
texture_pressed = ExtResource("7_aybse")
texture_hover = ExtResource("7_aybse")
texture_disabled = ExtResource("6_mmcy5")

[node name="Credits" type="TextureButton" parent="HomeScreen/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("5_cg640")
texture_normal = ExtResource("8_00gev")
texture_pressed = ExtResource("9_omsvs")
texture_hover = ExtResource("9_omsvs")
texture_disabled = ExtResource("8_00gev")

[node name="Settings" type="TextureButton" parent="HomeScreen/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("5_cg640")
texture_normal = ExtResource("10_l8bkm")
texture_pressed = ExtResource("11_7yrjh")
texture_hover = ExtResource("11_7yrjh")
texture_disabled = ExtResource("10_l8bkm")

[node name="SubViewportContainer" type="SubViewportContainer" parent="HomeScreen"]
anchors_preset = -1
anchor_top = 0.238
anchor_bottom = 0.713
offset_left = 724.0
offset_top = -18.224
offset_right = 1724.0
offset_bottom = 673.976
scale = Vector2(0.33, 0.33)
stretch = true

[node name="SubViewport" type="SubViewport" parent="HomeScreen/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1000, 1000)
render_target_update_mode = 4

[node name="Ball3dModel" type="MeshInstance3D" parent="HomeScreen/SubViewportContainer/SubViewport"]
layers = 2
mesh = ExtResource("12_lo573")

[node name="BallCam" type="Camera3D" parent="HomeScreen/SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 1.11084e-08, -8.67142e-08, -3.98236e-08, 0.825123, 0.564953, 7.78256e-08, 0.564953, -0.825123, 0, 1.57074, -2.23309)
cull_mask = 2
fov = 55.8

[node name="MeshInstance3D" type="MeshInstance3D" parent="HomeScreen/SubViewportContainer/SubViewport"]
transform = Transform3D(1.5, 0, 3.57628e-07, 0, 1.5, 0, -3.57628e-07, 0, 1.5, 0, 0, -1.2)
layers = 2
mesh = SubResource("QuadMesh_xvh5t")
surface_material_override/0 = SubResource("ShaderMaterial_j7jws")

[node name="HBoxContainer" type="HBoxContainer" parent="HomeScreen"]
anchors_preset = -1
anchor_top = 0.674
anchor_bottom = 0.736
offset_left = 861.0
offset_top = 0.247986
offset_right = 917.0
offset_bottom = 0.0719299
theme = ExtResource("5_cg640")

[node name="Left" type="Button" parent="HomeScreen/HBoxContainer"]
layout_mode = 2
text = " < "

[node name="Right" type="Button" parent="HomeScreen/HBoxContainer"]
layout_mode = 2
text = " > "

[node name="PlayerName" type="TextEdit" parent="HomeScreen"]
anchors_preset = -1
anchor_top = 0.735
anchor_bottom = 0.826
offset_left = 756.0
offset_top = -0.279999
offset_right = 1018.0
offset_bottom = -0.248047
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_5uu55")
placeholder_text = "Enter Name"

[node name="Credits" type="CanvasLayer" parent="."]
visible = false

[node name="Back" type="Button" parent="Credits"]
offset_left = 25.0
offset_top = 25.0
offset_right = 133.0
offset_bottom = 91.0
theme = ExtResource("5_cg640")
theme_override_font_sizes/font_size = 36
text = "Back"

[node name="GodotLogo" type="Sprite2D" parent="Credits"]
position = Vector2(128, 531)
scale = Vector2(1.5, 1.5)
texture = ExtResource("12_3vsu3")

[node name="MadeWith" type="RichTextLabel" parent="Credits"]
offset_left = 4.0
offset_top = 331.0
offset_right = 392.0
offset_bottom = 427.0
theme_override_font_sizes/normal_font_size = 5
theme_override_font_sizes/bold_font_size = 63
bbcode_enabled = true
text = "[b]Made With:[/b]"

[node name="BlenderLogo" type="Sprite2D" parent="Credits"]
position = Vector2(452, 530)
scale = Vector2(0.2, 0.2)
texture = ExtResource("15_46nur")

[node name="Git" type="Sprite2D" parent="Credits"]
position = Vector2(825, 532)
texture = ExtResource("16_fy3s4")

[node name="MadeBy" type="RichTextLabel" parent="Credits"]
offset_left = 394.0
offset_top = 29.0
offset_right = 996.0
offset_bottom = 379.0
theme_override_font_sizes/normal_font_size = 63
theme_override_font_sizes/bold_font_size = 63
bbcode_enabled = true
text = "[b]Made By:[/b]
Benjy Hutchinson
Jacob Flint"

[node name="Background" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Background"]
mesh = ExtResource("15_dnv3f")

[node name="CameraOrigin" type="Node3D" parent="Background"]

[node name="Camera3D" type="Camera3D" parent="Background/CameraOrigin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.855664, 2.87365)
cull_mask = 1
h_offset = -0.9

[node name="Outline" parent="Background/CameraOrigin/Camera3D" instance=ExtResource("16_saxo2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="Clouds" type="Node3D" parent="Background"]

[node name="Cloud1" type="MeshInstance3D" parent="Background/Clouds"]
transform = Transform3D(0.363999, 0, -0.67156, 0, 0.699113, 0, 0.646706, 0, 0.377988, 8.08085, 9.31929, 1.46716)
mesh = ExtResource("17_jl3cu")
skeleton = NodePath("../Cloud4")

[node name="Cloud2" type="MeshInstance3D" parent="Background/Clouds"]
transform = Transform3D(0.363999, 0, -0.67156, 0, 0.699113, 0, 0.646706, 0, 0.377988, 7.50195, 9.31929, -7.25392)
mesh = ExtResource("18_bfpb5")
skeleton = NodePath("../Cloud4")

[node name="Cloud3" type="MeshInstance3D" parent="Background/Clouds"]
transform = Transform3D(0.363999, 0, -0.67156, 0, 0.699113, 0, 0.646706, 0, 0.377988, -5.77754, 9.31929, 9.15787)
mesh = ExtResource("19_uc5da")
skeleton = NodePath("../Cloud4")

[node name="Cloud4" type="MeshInstance3D" parent="Background/Clouds"]
transform = Transform3D(0.520793, 0, 0, 0, 0.350003, 0, 0, 0, 0.520793, 16.6637, 7.15993, 0.303261)
mesh = ExtResource("17_jl3cu")
skeleton = NodePath("../../..")

[node name="Cloud5" type="MeshInstance3D" parent="Background/Clouds"]
transform = Transform3D(0.520793, 0, 0, 0, 0.350003, 0, 0, 0, 0.520793, -2.0223, 7.15993, -1.60658)
mesh = ExtResource("18_bfpb5")
skeleton = NodePath("../../..")

[node name="Cloud6" type="MeshInstance3D" parent="Background/Clouds"]
transform = Transform3D(0.520793, 0, 0, 0, 0.350003, 0, 0, 0, 0.520793, 4.34421, 7.15993, 11.1175)
mesh = ExtResource("19_uc5da")
skeleton = NodePath("../../..")

[node name="Cloud7" type="MeshInstance3D" parent="Background/Clouds"]
transform = Transform3D(0.271225, 0, 0, 0, 0.252622, 0, 0, 0, 0.271225, -2.61878, 9.66593, -9.5708)
mesh = ExtResource("19_uc5da")
skeleton = NodePath("../..")

[node name="Cloud8" type="MeshInstance3D" parent="Background/Clouds"]
transform = Transform3D(-0.414585, 0, -0.401459, 0, 0.488759, 0, 0.392019, 0, -0.409272, -11.443, 13.3707, -10.5182)
mesh = ExtResource("19_uc5da")
skeleton = NodePath("../Cloud4")

[node name="Cloud9" type="MeshInstance3D" parent="Background/Clouds"]
transform = Transform3D(-0.301807, 0, -0.498289, 0, 0.488759, 0, 0.479847, 0, -0.291427, -10.3493, 15.8345, -4.27713)
mesh = ExtResource("17_jl3cu")
skeleton = NodePath("../Cloud4")

[node name="CampaignSelector" type="Node3D" parent="."]
script = ExtResource("20_ubi46")

[node name="Title" type="RichTextLabel" parent="CampaignSelector"]
visible = false
offset_left = 15.0
offset_top = 19.0
offset_right = 1157.0
offset_bottom = 104.0
theme = ExtResource("5_cg640")
theme_override_font_sizes/bold_font_size = 54
bbcode_enabled = true
text = "[b]Play Campaign: Main Campaign[b]"
fit_content = true

[node name="TracksList" type="ItemList" parent="CampaignSelector"]
visible = false
offset_left = 204.0
offset_top = 110.0
offset_right = 888.0
offset_bottom = 532.0
theme = ExtResource("5_cg640")
theme_override_font_sizes/font_size = 57
item_count = 2
item_0/text = "0"
item_1/text = "1"

[node name="Back" type="Button" parent="CampaignSelector"]
visible = false
offset_left = 23.0
offset_top = 105.0
offset_right = 131.0
offset_bottom = 171.0
theme = ExtResource("5_cg640")
theme_override_font_sizes/font_size = 36
text = "Back"

[connection signal="mouse_entered" from="HomeScreen/Buttons/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="HomeScreen/Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="HomeScreen/Buttons/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="pressed" from="HomeScreen/Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="HomeScreen/Buttons/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="HomeScreen/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HomeScreen/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="HomeScreen/HBoxContainer/Right" to="." method="_on_right_pressed"]
[connection signal="text_changed" from="HomeScreen/PlayerName" to="." method="_on_player_name_text_changed"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_back_pressed"]
[connection signal="item_activated" from="CampaignSelector/TracksList" to="CampaignSelector" method="_on_tracks_list_item_activated"]
[connection signal="pressed" from="CampaignSelector/Back" to="." method="_on_campaign_select_back_pressed"]
